[tool.poetry]
name = "sapientml-preprocess"
version = "0"
description = "A SapientML plugin of preprocess CodeBlockGenerator"
authors = ["The SapientML Authors"]
maintainers = [
    "Kosaku Kimura <kimura.kosaku@fujitsu.com>",
    "Akira Ura <ura.akira@fujitsu.com>",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
sapientml = "*"
jinja2 = "^3.1.2"
mecab-python3 = "^1.0.6"
fasttext-wheel = "^0.9.2"
requests = "^2.31.0"
numba = ">=0.57.1,<0.59.0"
ipadic = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pysen = "^0.10.5"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."sapientml.code_block_generator"]
preprocess = "sapientml_preprocess:Preprocess"

[tool.pysen]
version = "0.10"

[tool.pysen-cli]
settings_dir = ".pysen"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
line_length = 120
py_version = "py310"

[tool.pysen.lint.source]
includes = ["sapientml_preprocess/", "tests/"]

[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = ["tests"]

